[gd_scene load_steps=4 format=3 uid="uid://lscflbdeug6c"]

[ext_resource type="Script" path="res://Scenes/Weapons, Tools, and Spells/Weapons/Shuriken.gd" id="1_f0vdb"]
[ext_resource type="Texture2D" uid="uid://c0chxsiq6dorr" path="res://Assets/Weapons and Armor/2D/Weapons2.png" id="2_t7820"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5k2pj"]
size = Vector2(14.6793, 14.4315)

[node name="Shuriken" type="Node2D"]
script = ExtResource("1_f0vdb")

[node name="Area2d" type="Area2D" parent="." groups=["Ranged"]]
z_index = 1
y_sort_enabled = true
scale = Vector2(0.3, 0.3)
collision_layer = 32
collision_mask = 24

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2d"]
shape = SubResource("RectangleShape2D_5k2pj")

[node name="ShurikenTimeout" type="Timer" parent="."]
wait_time = 0.6
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 2.37272
scale = Vector2(0.18, 0.18)
texture = ExtResource("2_t7820")
region_enabled = true
region_rect = Rect2(4.96429, 522.277, 53.5905, 43.952)

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="." groups=["Shuriken"]]
rotation = -0.00440366
scale = Vector2(0.218663, 0.218301)
enable_node_path = NodePath("../Area2d")

[connection signal="area_entered" from="Area2d" to="." method="EnemyHit"]
[connection signal="body_entered" from="Area2d" to="." method="DestroyShuriken"]
[connection signal="timeout" from="ShurikenTimeout" to="." method="DestroyShuriken"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="DestroyShurikenV"]
